Fix: remove hardcoded default exercises